--- a/angular-cinema-project/cinema/src/app/movie/movie.component.html
+++ b/angular-cinema-project/cinema/src/app/movie/movie.component.html
@@ -1,20 +1,55 @@
 <section class="container-md">
-  <form #mForm="ngForm">
+  <form #mForm="ngForm" ngSubmit="saveMovie(mForm)">
     <div class="form-group">
       <label class="text-warning" for="title">Movie Title:</label>
-      <input id="title" type="text" class="form-control"
-        required pattern="" name="title" [(ngModel)]="movie.title">
+      <input
+        id="title"
+        type="text"
+        class="form-control"
+        required
+        pattern="^[a-űA-Ű ]{5,25}$"
+        name="title"
+        [(ngModel)]="movie.title"
+      />
     </div>
     <div class="row">
       <div class="form-group col-6">
-
+        <label class="text-warning" for="year">Release year:</label>
+        <input
+          id="year"
+          type="text"
+          class="form-control"
+          required
+          pattern="^(19[0-9]{2})|(20([0-1][0-9]|2[0-1]))$"
+          name="year"
+          [(ngModel)]="movie.year"
+        />
       </div>
       <div class="form-group col-6">
-
+        <label class="text-warning" for="category">Category:</label>
+        <select
+          class="form-select form-control"
+          id="category"
+          type="select"
+          required
+          pattern=""
+          name="category"
+          required
+          [(ngModel)]="movie.category"
+        >
+          <option selected>Choose Category</option>
+          <option value="1">Drama</option>
+          <option value="2">Action</option>
+          <option value="3">Fantasy</option>
+        </select>
       </div>
     </div>
+    <button type="submit" class="btn btn-warning" [disabled]="mForm.invalid">
+      Save
+    </button>
 
+    <small class="text-danger" [hidden]="mForm.valid"
+      >Fill all field to save!</small
+    >
   </form>
-
-
 </section>
